@@ -52,6 +52,7 @@ import org.apache.bookkeeper.replication.ReplicationException.CompatibilityExcep
 import org.apache.bookkeeper.replication.ReplicationException.UnavailableException;
 import org.apache.bookkeeper.test.ZooKeeperUtil;
 import org.apache.bookkeeper.util.ZkUtils;
+import org.apache.bookkeeper.zookeeper.ZooKeeperWatcherBase;
 import org.apache.commons.lang.StringUtils;
 import org.apache.zookeeper.KeeperException;
 import org.apache.zookeeper.WatchedEvent;
@@ -94,10 +95,12 @@ public class TestLedgerUnderreplicationManager {
 
         executor = Executors.newCachedThreadPool();
 
+        ZooKeeperWatcherBase w = new ZooKeeperWatcherBase(10000);
         zkc1 = ZkUtils.createConnectedZookeeperClient(
-                zkUtil.getZooKeeperConnectString(), 10000);
+                zkUtil.getZooKeeperConnectString(), w);
+        w = new ZooKeeperWatcherBase(10000);
         zkc2 = ZkUtils.createConnectedZookeeperClient(
-                zkUtil.getZooKeeperConnectString(), 10000);
+                zkUtil.getZooKeeperConnectString(), w);
         lmf1 = LedgerManagerFactory.newLedgerManagerFactory(conf, zkc1);
         lmf2 = LedgerManagerFactory.newLedgerManagerFactory(conf, zkc2);
         basePath = conf.getZkLedgersRootPath() + '/'
