@@ -96,6 +96,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-436: Journal#rollLog may leak file handler (umamahesh via ivank)
 
+        BOOKKEEPER-424: Bookie start is failing intermittently when zkclient connection delays (rakeshr via ivank)
+
       hedwig-protocol:
 
         BOOKKEEPER-394: CompositeException message is not useful (Stu Hood via sijie)
